@@ -7,6 +7,9 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: Possible alignment issue when accessing read/write buffers using
+    wchar_t.  Andreas Greve.
+
   * MODIFIED: Changed default stack-sizes to 16MB local and 32MB global
     and trail.  Should not affect anything, except applications creating
     many threads.  It is adviced to specify stack-sizes with thread_create/3
